tests/health/gold/sdk/tools__toitlsp__cmd__assets__bug.toit.gold
tools/toitlsp/cmd/assets/bug.toit:6:12: error: Incomplete expression
  print 1 +
           ^
tools/toitlsp/cmd/assets/bug.toit:4:8: error: Package for prefix 'not_there' not found
import not_there
       ^~~~~~~~~
tools/toitlsp/cmd/assets/bug.toit:7:3: error: Unresolved identifier: 'unresolved'
  unresolved
  ^~~~~~~~~~
<sdk>/core/numbers.toit:593:12: warning: Deprecated 'int.parse'
    return parse data 0 data.size --radix=radix --on_error=: throw it
           ^~~~~
<sdk>/core/numbers.toit:597:12: warning: Deprecated 'int.parse'
    return parse data from to --radix=radix --on_error=: throw it
           ^~~~~
<sdk>/core/numbers.toit:606:12: warning: Deprecated 'int.parse'
    return parse data 0 data.size --radix=radix --on_error=on_error
           ^~~~~
<sdk>/core/string.toit:327:14: warning: Deprecated 'int.parse'
        : int.parse format start (pos - 1) --radix=10 --on_error=: throw it
             ^
